[package]
name = "transit"
version = "0.1.0"
authors = ["Al McElrath <hello@yrns.org>"]
edition = "2021"

[features]
default = []

[workspace]
members = ["transit-graph", "edit_egui", "janet", "eframe-dynamic"]

[dependencies]
edit_egui = { path = "./edit_egui" }
janet = { path = "./janet" }
eframe = { path = "./eframe-dynamic", package = "eframe-dynamic" }
