[package]
name = "transit"
version = "0.1.0"
authors = ["Al McElrath <hello@yrns.org>"]
edition = "2021"

[features]
default = ["edit", "editor", "bin", "rust", "janet"]
# Editable graph.
edit = []
# Editor library (egui).
editor = ["edit", "serde", "dep:egui", "dep:tracing"]
# Editor binary.
bin = [
        "editor",
        "dep:tracing-subscriber",
        "dep:eframe",
        "dep:font-kit",
        "dep:rfd",
        "dep:notify-debouncer-mini",
        "dep:directories",
]
serde = [
        "dep:ron",
        "dep:serde",
        "eframe/persistence",
        "relative-path/serde",
        "emath/serde",
]
rust = [
        "dep:bevy_app",
        "dep:bevy_asset",
        "dep:bevy_core",
        "dep:bevy_ecs",
        "dep:bevy_reflect",
        # "dep:bevy_eventlistener",
        "dep:tree-sitter",
        "dep:tree-sitter-rust",
]
janet = ["dep:janetrs"]

[lib]

[[bin]]
name = "transit"
required-features = ["bin"]
test = false

[[example]]
name = "text"
required-features = ["edit", "serde"]

[dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
nohash-hasher = "0.2.0"
thiserror = "1"
heck = "0.5.0"
# eframe = { path = "./eframe-dynamic", package = "eframe-dynamic" }
egui = { version = "0.28", default-features = false, optional = true }
# Used for serialization of graphs when editor is not enabled.
emath = { version = "0.28", optional = true }
eframe = { version = "0.28", default-features = false, features = [
        "wgpu",
        "x11",
        "persistence",
], optional = true }
tracing = { version = "0.1", default-features = false, features = [
        "std",
], optional = true }
tracing-subscriber = { version = "0.3", optional = true }
font-kit = { version = "0.13.0", optional = true }
rfd = { version = "0.14", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
notify-debouncer-mini = { version = "0.4.1", optional = true }
# TODO
relative-path = { version = "1.9.2", optional = true }
ron = { version = "0.8.1", optional = true }
directories = { version = "5.0.1", optional = true }

# Rust/Bevy
bevy_app = { path = "../clone/bevy/crates/bevy_app", version = "0.14", optional = true }
bevy_asset = { path = "../clone/bevy/crates/bevy_asset", version = "0.14", optional = true }
bevy_core = { path = "../clone/bevy/crates/bevy_core", version = "0.14", optional = true }
bevy_ecs = { path = "../clone/bevy/crates/bevy_ecs", version = "0.14", optional = true }
bevy_reflect = { path = "../clone/bevy/crates/bevy_reflect", version = "0.14", optional = true }
# bevy_eventlistener = { version = "0.8.0", optional = true }
tree-sitter-rust = { version = "0.21.2", optional = true }
tree-sitter = { version = "0.22.6", optional = true }

# Janet
#janetrs = { version = "0.7.0", features = ["system", "link-system"] }
janetrs = { path = "../clone/janetrs", version = "0.7", features = [
        "link-system",
], optional = true }

[dev-dependencies]
inquire = "0.7.5"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
