[package]
name = "edit"
version = "0.1.0"
authors = ["Al McElrath <hello@yrns.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transit = { path = ".." }
#druid = "0.4.0"
druid = { path = "../../druid/druid" }
anyhow = "1.0.26"
log = "0.4.8"
