[package]
name = "edit"
version = "0.1.0"
authors = ["Al McElrath <hello@yrns.org>"]
edition = "2018"

[dependencies]
transit = { path = "..", features = ["editor"] }
druid = { path = "../../druid/druid" }
anyhow = "1.0.26"
log = "0.4.8"
indexmap = "1.3.2"
ron = "0.5.1"
serde = { version = "1.0.104", features = ["rc"] }
flo_curves = "0.3.1"
