[package]
name = "edit_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde", "eframe/persistence", "relative-path/serde"]

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
transit-graph = { path = "../transit-graph" }
eframe = { version = "0.1.0", path = "../eframe-dynamic", package = "eframe-dynamic" }
#eframe = { version = "0.20.1", default-features = false, features = ["default_fonts", "wgpu"] }
native-dialog = "0.7.0"
serde = { version = "1", optional = true, features = ["derive"] }
nohash-hasher = "0.2.0"
notify-debouncer-mini = "0.4.1"
relative-path = "1.9.2"
ron = "0.8.1"
thiserror = "1.0.58"
