[package]
name = "edit_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["editor"]
editor = [
        "serde",
        "dep:eframe",
        "dep:tracing",
        "dep:native-dialog",
        "dep:notify-debouncer-mini",
        "dep:directories",
]
serde = ["dep:ron", "dep:serde", "eframe/persistence", "relative-path/serde", "emath/serde"]

[dependencies]
tracing = { version = "0.1", default-features = false, features = [
        "std",
], optional = true }
transit-graph = { path = "../transit-graph" }
eframe = { version = "0.1.0", path = "../eframe-dynamic", package = "eframe-dynamic", optional = true }
#eframe = { version = "0.20.1", default-features = false, features = ["default_fonts", "wgpu"] }
native-dialog = { version = "0.7.0", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
notify-debouncer-mini = { version = "0.4.1", optional = true }
# TODO
relative-path = "1.9.2"
ron = { version = "0.8.1", optional = true }
thiserror = { version = "1.0.58", optional = false }
directories = { version = "5.0.1", optional = true }
emath = "0.28"
