[package]
name = "eframe-dynamic"
version = "0.1.0"
edition = "2021"

# https://robert.kra.hn/posts/2022-09-09-speeding-up-incremental-rust-compilation-with-dylibs/

[features]
persistence = ["eframe/persistence"]

[dependencies]
#eframe = { version = "0.20.0", path = "../../../clone/egui/crates/eframe", features = ["wgpu"] }
eframe = { version = "0.21.0", default-features = false, features = ["default_fonts", "wgpu"] }

[lib]
crate-type = ["dylib"]
