[package]
name = "eframe-dynamic"
version = "0.1.0"
edition = "2021"

# https://robert.kra.hn/posts/2022-09-09-speeding-up-incremental-rust-compilation-with-dylibs/

[features]
persistence = ["eframe/persistence"]

[dependencies]
#eframe = { version = "0.20.0", path = "../../../clone/egui/crates/eframe", features = ["wgpu"] }
eframe = { version = "0.28", default-features = false, features = ["wgpu", "x11"] }

# Its not clear why rlib is necessary but it fixes this issue when running "cargo test --workspace": https://github.com/rust-lang/rust/issues/34909
[lib]
crate-type = ["rlib", "dylib"]
