[package]
name = "janet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde", "transit-graph/serde"]

[dependencies]
#janetrs = { version = "0.5.0", features = ["system", "link-system"] }
janetrs = { git = "ssh://git@github.com/GrayJack/janetrs.git", version = "0.5.0", features = ["amalgation"] }
transit-graph = { path = "../transit-graph" }
serde = { version = "1", optional = true, features = ["derive"] }
edit_egui = { path = "../edit_egui", features = ["serde"] }
thiserror = "1.0.38"
