[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
bevy_app = "0.13"
bevy_asset = "0.13"
bevy_ecs = "0.13"
bevy_reflect = "0.13"
edit_egui = { path = "../edit_egui" }
# bevy_utils?
tracing = { version = "0.1", default-features = false, features = ["std"] }
transit-graph = { path = "../transit-graph" }
serde = "1"
#heck = "0.5.0"
thiserror = "1.0.58"
bevy_eventlistener = "0.7.0"

[dev-dependencies]
bevy_core = "0.13"
