[package]
name = "transit-graph"
version = "0.1.0"
authors = ["Al McElrath <hello@yrns.org>"]
edition = "2021"

[features]
default = ["edit", "serde"]
edit = []
serde = ["dep:serde", "dep:ron"]

[dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
nohash-hasher = "0.2.0"
serde = { version = "1", optional = true, features = ["derive"] }
ron = { version = "0.8", optional = true }
thiserror = "1.0.58"

[[example]]
name = "text"
test = true

[dev-dependencies]
inquire = "0.7.5"
