[package]
name = "eframe-dynamic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
persistence = ["eframe/persistence"]

[dependencies]
#eframe = { version = "0.20.0", path = "../../../clone/egui/crates/eframe", features = ["wgpu"] }
eframe = { version = "0.21.0", default-features = false, features = ["default_fonts", "wgpu"] }

[lib]
crate-type = ["dylib"]
